Fix button position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -147,14 +147,16 @@ button:hover {
   align-items: center;
   justify-content: space-between;
   z-index: 100;
-  padding: 0 3.5rem;
+  padding: 0 3rem;
   background-color: #48556a;
   left: 0;
   right: 0;
   bottom: 0;
-  min-height: 61.75px;
+  height: 75px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  opacity: 1;
+  visibility: visible;
 }
 
 @media screen and (min-width: 80rem) {
@@ -196,6 +198,9 @@ button:hover {
 
 .media-links {
   display: none;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
 }
 
 .icons {
